--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==21.4.0
 autopep8==1.6.0
 click==8.0.3
 flake8==4.0.1
+Faker==24.8.0
 Flask==2.0.2
 Flask-Cors==3.0.10
 flask-marshmallow==0.14.0
