--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,5 +21,9 @@ jobs:
       run: |
        pip3 install -r requirements.txt
 
-    - name: Run tests
-      run: pytest --cov
+    - name: Run tests and coverage
+      run: |
+        pytest --cache-clear --cov > pytest-coverage.txt
+
+    - name: Comment coverage
+      uses: coroo/pytest-coverage-commentator@v1.0.2
